[project]
name = "wardensync"
version = "0.1.0"
description = "One-way Vaultwarden -> Bitwarden sync/mirror tool"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]

# [project.scripts]
# wardensync = "wardensync.cli:cli"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
